--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple");
-
 :root {
-    --font: "Rancho", sans-serif;
+    --font: 'Courier New', Courier, monospace;
     --color-bg: #000b14;
     --color-theme: #ffffff;
 }
@@ -10,7 +8,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Courier New', Courier, monospace;
 }
 
 body {
@@ -18,6 +15,7 @@ body {
     background: var(--color-bg);
     color: var(--color-theme);
     font-family: var(--font);
+    overflow: hidden;
 }
 
 .wrapper {
@@ -26,13 +24,25 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .wheel-area {
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    transform: rotate(-55deg);
+    margin: 9px 5px 5px;
+    position: absolute;
+    top: calc(100vh - 51vw);
+    max-width: 1400px;
+}
+
+@media screen and (min-width :1400px) {
+    .wheel-area {
+        top: calc(100vh - 710px)
+    }
 }
 
 h1 {
@@ -42,6 +52,7 @@ h1 {
     transition: all 0.25s ease-in-out;
     position: absolute;
     top: 0;
+    right: 30px;
 }
 
 h1.isHidden {
@@ -55,17 +66,33 @@ svg#wheel {
     height: auto;
 }
 
+.spin__button {
+    display: flex;
+    width: calc(50% / 7);
+    flex-flow: row-reverse;
+    cursor: pointer;
+}
+
+.spin__button span {
+    transform: rotate(90deg);
+    font-size: 20px;
+    padding: 28px 0 0 6px;
+    animation: spinText 1s infinite;
+}
+
+.spin__button.isSpinning span {
+    animation: none;
+}
+
 svg#pin {
-    width: calc(50% / 25);
-    height: calc(50% / 25);
     fill: var(--color-theme);
 }
 
 .instructions {
-    min-height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: center;
     padding: 1rem;
 }
@@ -109,14 +136,32 @@ svg#pin.isSpinning {
 .instructions .gift-value {
     margin-top: 1rem;
     padding: 0.25rem 0.75rem;
-    color: inherit;
     font-family: inherit;
     margin: 10px 0;
     border: none;
-    border-radius: 10px;
+    border-radius: 4px;
     box-shadow: 0 0 0 2px currentColor;
     background: var(--color-bg);
     transition: all 0.5s ease-out;
+    font-weight: 600;
+}
+
+audio {
+    visibility: hidden
+}
+
+@keyframes spinText {
+    0% {
+        transform: rotate(90deg) scale(0.8);
+    }
+
+    50% {
+        transform: rotate(90deg) scale(1.2);
+    }
+
+    100% {
+        transform: rotate(90deg) scale(0.8);
+    }
 }
 
 @keyframes pinWheel {
